--- a/CSGYoungAdultGroup/Views/Home/Index.cshtml
+++ b/CSGYoungAdultGroup/Views/Home/Index.cshtml
@@ -1,31 +1,26 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+	ViewBag.Title = "Home Page";
 }
 
 <div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+	<h1>CSGYoungAdultGroup</h1>
 </div>
-
 <div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
+	<div class="col-md-4">
+		<h2>Welcome to CSG Young Adult Group</h2>
+		<p>
+			CSG Young Adult Group is a Christian fellowship group that enable to make smoth friendship between Christan young and to Develop there talent, skills. 
+			We Do Have Diffrent group in it . You are Welcome to join this Group.
+		</p>
+	</div>
+	<div class="col-md-4">
+		<h2>Build it from scratch</h2>
+		<p>You can build the application by following the steps in the tutorial series on the ASP.NET site.</p>
+		<p><a class="btn btn-default" href="http://www.asp.net/mvc/tutorials/getting-started-with-ef-using-mvc/">See the tutorial &raquo;</a></p>
+	</div>
+	<div class="col-md-4">
+		<h2>Download it</h2>
+		<p>You can download the completed project from the Microsoft Code Gallery.</p>
+		<p><a class="btn btn-default" href="http://code.msdn.microsoft.com/ASPNET-MVC-Application-b01a9fe8">Download &raquo;</a></p>
+	</div>
 </div>
